# RustAudioLeds

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.aarch64  Leds.Service  Readme.md
bluetoothapp/: build.gradle.kts  local.properties  settings.gradle.kts
bluetoothapp/app/: build.gradle.kts
bluetoothapp/app/src/androidTest/java/com/kevinisabelle/visualizerui/: ExampleInstrumentedTest.kt  PresetTest.kt
bluetoothapp/app/src/main/: AndroidManifest.xml
bluetoothapp/app/src/main/res/values/: strings.xml  themes.xml
bluetoothapp/app/src/main/res/xml/: root_preferences.xml
bluetoothapp/gradle/wrapper/: gradle-wrapper.properties
pcb/audioleds/: audioleds.kicad_prl  audioleds.kicad_pro
src/: animations.rs  color.rs  constants.rs  dsp.rs  main.rs  presets.rs  settings.rs  values.rs
src/bluetooth/: chrc_animation_mode.rs  chrc_brightness.rs  chrc_color.rs  chrc_display_mode.rs  chrc_fft_size.rs  chrc_fps.rs  chrc_frequencies.rs  chrc_gains.rs  chrc_led_count.rs  chrc_leds_buffer.rs  chrc_presets_activate.rs  chrc_presets_delete.rs  chrc_presets_list.rs  chrc_presets_read.rs  chrc_presets_read_activated_index.rs  chrc_presets_save.rs  chrc_presets_select.rs  chrc_read_settings_as_preset.rs  chrc_skew.rs  chrc_smooth_size.rs  fft_size_chrc.rs  fps_chrc.rs  gain_chrc.rs  led_count_chrc.rs  leds_buffer2_chrc.rs  leds_buffer_chrc.rs  mod.rs  registration.rs  service_visualizer.rs  smooth_size_chrc.rs  visualizer_app.rs  visualizer_service.rs
src/bluez/: advertisment.rs  agent.rs  base_gatt_desc.rs  device.rs  mod.rs  utils.rs
(+42 files in other folders)
