[package]
name = "AudioLeds"
version = "0.1.0"
edition = "2024"

[dependencies]
serialport = { version = "4.7.2" }
cpal = "0.15.3"
spectrum-analyzer = "1.7.0"
zbus = "5.5.0"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
macros = { path = "./macros" }
flate2 = "1.1.2"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
debug = false
